GNOME Bugzilla – Bug 706987
Ignore MSN Telepathy account type
Last modified: 2013-08-28 16:33:13 UTC
Windows Live/MSN is already handled directly by GOA, so the telepathy-haze provider should be filtered out like we already do for GTalk and Facebook. Note that existing telepathy-haze MSN accounts will keep working.
Created attachment 253397 [details] [review] telepathyfactory: filter out MSN too MSN is already handled by a specific provider in GOA, so no need to show it twice (even if the telepathy-haze one uses Windows Live's proprietary protocol, while the GOA one uses XMPP).
Review of attachment 253397 [details] [review]: Looks good.