telepathyfactory: filter out MSN too

MSN is already handled by a specific provider in GOA, so no need to show
it twice (even if the telepathy-haze one uses Windows Live's proprietary
protocol, while the GOA one uses XMPP).

https://bugzilla.gnome.org/show_bug.cgi?id=706987